# wolf

./: .cproject  .gitignore  .project  CMakeLists.txt  package.xml
doc/html/: Installation.html  Performance.html  annotated.html  association__nnls_8cpp.html  association__nnls_8cpp__incl.map  association__nnls_8cpp__incl.md5  association__nnls_8cpp_source.html  association__nnls_8h.html  association__nnls_8h__dep__incl.map  association__nnls_8h__dep__incl.md5  association__nnls_8h__incl.map  association__nnls_8h__incl.md5  association__nnls_8h_source.html  association__node_8cpp.html  association__node_8cpp__incl.map  association__node_8cpp__incl.md5  association__node_8cpp_source.html  association__node_8h.html  association__node_8h__dep__incl.map  association__node_8h__dep__incl.md5  association__node_8h__incl.map  association__node_8h__incl.md5  association__node_8h_source.html  association__solver_8cpp.html  association__solver_8cpp__incl.map  association__solver_8cpp__incl.md5  association__solver_8cpp_source.html  association__solver_8h.html  association__solver_8h__dep__incl.map  association__solver_8h__dep__incl.md5  association__solver_8h__incl.map  association__solver_8h__incl.md5  association__solver_8h_source.html  association__tree_8cpp.html  association__tree_8cpp__incl.map  association__tree_8cpp__incl.md5  association__tree_8cpp_source.html  association__tree_8h.html  association__tree_8h__dep__incl.map  association__tree_8h__dep__incl.md5  (+2670 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  enums_0.js  (+96 more)
src/: CMakeLists.txt  Group.h  Lie.h  Manifold.h  ORBextractor.cpp  SO3.cpp  SO3.h  capture_base.cpp  capture_base.h  capture_gps_fix.cpp  capture_gps_fix.h  capture_laser_2D.cpp  capture_laser_2D.h  capture_odom_2D.cpp  capture_odom_2D.h  capture_relative.cpp  capture_relative.h  constraint_analytic.cpp  constraint_analytic.h  constraint_base.cpp  constraint_base.h  constraint_fix.h  constraint_relative_2D_analytic.h  constraint_sparse.h  correspondence_base.cpp  correspondence_base.h  correspondence_gps_2D.cpp  correspondence_gps_2D.h  correspondence_odom_2D_complex_angle.cpp  correspondence_odom_2D_complex_angle.h  correspondence_odom_2D_theta.cpp  correspondence_odom_2D_theta.h  correspondence_sparse.h  feature_base.cpp  feature_base.h  feature_corner_2D.cpp  feature_fix.cpp  feature_gps_fix.cpp  feature_gps_fix.h  feature_odom_2D.cpp  (+81 more)
src/ceres_wrapper/: ceres_manager.cpp
src/examples/: CMakeLists.txt  camera_params.yaml  rosbag_image_source.cpp  rosbag_image_source.h  test_2_lasers_offline.cpp  test_analytic_odom_constraint.cpp  test_ceres_manager.cpp  test_ceres_manager_tree.cpp  test_ceres_odom_batch.cpp  test_ceres_odom_iterative.cpp  test_ceres_odom_plot.sce  test_ceres_wrapper.cpp  test_ceres_wrapper_block_sizes.cpp  test_ceres_wrapper_non_template.cpp  test_ceres_wrapper_residual_parametrization.cpp  test_ceres_wrapper_state_units.cpp  test_ceres_wrapper_states.cpp  test_image.cpp  test_image_ORB.cpp  test_image_ros.cpp  test_motion.cpp  test_motion_2d.cpp  test_node_linked.cpp  test_spatial.cpp  test_states.cpp  test_wolf_autodiffwrapper.cpp  test_wolf_factories.cpp  test_wolf_imported_graph.cpp  test_wolf_prunning.cpp  test_wolf_tree.cpp
src/spatial/: act-on-set.hpp  explog.hpp  fcl-pinocchio-conversions.hpp  frame.hpp  fwd.hpp  inertia.hpp  motion.hpp  se3.hpp  skew.hpp  symmetric3.hpp
src/yaml/: sensor_camera_yaml.cpp  sensor_laser_2D_yaml.cpp
test/: .gitignore  CMakeLists.txt  test_ceres.cpp  test_node.cpp
